--- a/src/linux/universal/linux-3.18/drivers/mtd/devices/Makefile
+++ b/src/linux/universal/linux-3.18/drivers/mtd/devices/Makefile
@@ -22,7 +22,7 @@ obj-$(CONFIG_MTD_SST25L)	+= sst25l.o
 obj-$(CONFIG_MTD_BCM47XXSFLASH)	+= bcm47xxsflash.o
 obj-$(CONFIG_MTD_AR7100_SPI_FLASH)	+= ar7100_flash.o
 obj-$(CONFIG_MTD_AR9100_PARALLEL_FLASH)	+= ar9100_pflash.o
-obj-$(CONFIG_MTD_AR7240_SPI_FLASH)	+= ar7240_flash.o
+obj-$(CONFIG_MTD_AR7240_SPI_FLASH)	+= ar7240_flash.o qca-sf.o
 obj-$(CONFIG_WZRAG300NH)	+= wzrag300nh_flash.o
 obj-$(CONFIG_WZRG450NH)		+= wzrg450nh_flash.o
 obj-$(CONFIG_MTD_SPIFLASH)	+= spiflash.o
