--- a/src/router/rc/Makefile
+++ b/src/router/rc/Makefile
@@ -1034,6 +1034,11 @@ ifeq ($(CONFIG_VENTANA),y)
 	install update-after-pivot.sh $(INSTALLDIR)/usr/sbin	
 	install ldd.sh $(INSTALLDIR)/usr/sbin
 endif
+ifeq ($(CONFIG_X86),y)
+	install update-prepare.sh $(INSTALLDIR)/usr/sbin	
+	install update-after-pivot.sh $(INSTALLDIR)/usr/sbin	
+	install ldd.sh $(INSTALLDIR)/usr/sbin
+endif
 ifneq ($(CONFIG_TW6600),y)
 ifeq ($(CONFIG_DIST),"micro")
 	cd $(INSTALLDIR)/sbin && ln -sf rc brctl
