update from git
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35729 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/ntfs-3g/src/ntfs-3g.8.in
+++ b/src/router/ntfs-3g/src/ntfs-3g.8.in
@@ -52,6 +52,8 @@ hibernation and fast restarting :
 powercfg /h off
 .sp
 .RE
+If either Windows is hibernated or its fast restart is enabled, partitions
+on internal disks are forced to be mounted in read-only mode.
 .SS Access Handling and Security
 By default, files and directories are owned by the effective 
 user and group of the mounting process, and everybody has
