for rambutan, untested
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35733 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/rc/Makefile
+++ b/src/router/rc/Makefile
@@ -143,6 +143,9 @@ endif
 ifeq ($(CONFIG_LIMA),y)
 CFLAGS += -DHAVE_LIMA
 endif
+ifeq ($(CONFIG_RAMBUTAN),y)
+CFLAGS += -DHAVE_RAMBUTAN
+endif
 ifeq ($(CONFIG_SOLO51),y)
 CFLAGS += -DHAVE_SOLO51
 endif
