--- a/src/router/services/Makefile
+++ b/src/router/services/Makefile
@@ -727,6 +727,9 @@ endif
 ifeq ($(CONFIG_LIMA),y)
 CFLAGS_EXTRA += -DHAVE_LIMA
 endif
+ifeq ($(CONFIG_RAMBUTAN),y)
+CFLAGS_EXTRA += -DHAVE_RAMBUTAN
+endif
 ifeq ($(CONFIG_JJAP005),y)
 CFLAGS_EXTRA += -DHAVE_JJAP005
 endif
