support for wr1043 v4 and v5
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35779 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/libutils/Makefile
+++ b/src/router/libutils/Makefile
@@ -396,6 +396,9 @@ endif
 ifeq ($(CONFIG_SX763),y)
   CFLAGS += -DHAVE_SX763
 endif
+ifeq ($(CONFIG_WR1043V4),y)
+  CFLAGS += -DHAVE_WR1043V4
+endif
 ifeq ($(CONFIG_LIMA),y)
   CFLAGS += -DHAVE_LIMA
 endif
