--- a/src/router/services/Makefile
+++ b/src/router/services/Makefile
@@ -688,6 +688,9 @@ endif
 ifeq ($(CONFIG_ARCHERC7V4),y)
 CFLAGS_EXTRA += -DHAVE_ARCHERC7V4
 endif
+ifeq ($(CONFIG_WR1043V4),y)
+CFLAGS_EXTRA += -DHAVE_WR1043V4
+endif
 ifeq ($(CONFIG_WDR4900V2),y)
 CFLAGS_EXTRA += -DHAVE_WDR4900V2
 endif
