--- a/src/router/freeradius3/raddb/proxy.conf
+++ b/src/router/freeradius3/raddb/proxy.conf
@@ -2,7 +2,7 @@
 ##
 ## proxy.conf -- proxy radius and realm configuration directives
 ##
-##	$Id: a72beebf52d791616a09ebd69dd7ea9349597363 $
+##	$Id: ba510994ae2a68af00642b5c3aa46091cc4b00f3 $
 
 #######################################################################
 #
@@ -739,8 +739,8 @@ realm LOCAL {
 #  prefix or suffix.  User names like "bob" will match this one.
 #
 #realm NULL {
-#	authhost	= radius.company.com:1600
-#	accthost	= radius.company.com:1601
+#	authhost	= radius.example.com:1600
+#	accthost	= radius.example.com:1601
 #	secret		= testing123
 #}
 
@@ -748,8 +748,8 @@ realm LOCAL {
 #  This realm is for ALL OTHER requests.
 #
 #realm DEFAULT {
-#	authhost	= radius.company.com:1600
-#	accthost	= radius.company.com:1601
+#	authhost	= radius.example.com:1600
+#	accthost	= radius.example.com:1601
 #	secret		= testing123
 #}
 
