--- a/src/router/freeradius3/src/modules/rlm_eap/types/rlm_eap_fast/all.mk.in
+++ b/src/router/freeradius3/src/modules/rlm_eap/types/rlm_eap_fast/all.mk.in
@@ -1,7 +1,9 @@
 TARGETNAME	:= @targetname@
 
 ifneq "$(OPENSSL_LIBS)" ""
+ifneq "$(TARGETNAME)" ""
 TARGET		:= $(TARGETNAME).a
+endif
 endif
 
 SOURCES		:= $(TARGETNAME).c eap_fast.c eap_fast_crypto.c
