embedd code to reduce size
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35862 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/linux/universal/linux-3.18/lib/lzma/Makefile
+++ b/src/linux/universal/linux-3.18/lib/lzma/Makefile
@@ -1,4 +1,4 @@
-lzma_compress-objs := LzFind.o LzmaEnc.o
+lzma_compress-objs := LzmaEnc.o
 lzma_decompress-objs := LzmaDec.o
 
 obj-$(CONFIG_LZMA_COMPRESS) += lzma_compress.o
