--- a/src/linux/universal/linux-4.9/lib/lzma/Makefile
+++ b/src/linux/universal/linux-4.9/lib/lzma/Makefile
@@ -1,4 +1,4 @@
-lzma_compress-objs := LzFind.o LzmaEnc.o
+lzma_compress-objs := LzmaEnc.o
 lzma_decompress-objs := LzmaDec.o
 
 obj-$(CONFIG_LZMA_COMPRESS) += lzma_compress.o
