--- a/src/linux/universal/linux-3.18/drivers/mtd/Kconfig
+++ b/src/linux/universal/linux-3.18/drivers/mtd/Kconfig
@@ -38,6 +38,11 @@ config MTD_ROOTFS_GEN
 	depends on MTD = "y" && (RALINK_OPENWRT || PPC32)
 	default y
 
+config MTD_TRXSPLIT
+	bool "Automatically find and split TRX partitions"
+	depends on ADM5120
+	default n
+
 config MTD_REDBOOT_PARTS
 	tristate "RedBoot partition table parsing"
 	---help---
