--- a/src/linux/universal/linux-3.18/drivers/mtd/maps/Makefile
+++ b/src/linux/universal/linux-3.18/drivers/mtd/maps/Makefile
@@ -84,6 +84,7 @@ obj-$(CONFIG_RALINK_RT5350)	+= nvram_kernel.o
 obj-$(CONFIG_RALINK_RT3883)	+= nvram_kernel.o
 obj-$(CONFIG_RALINK_RT2880)	+= nvram_kernel.o
 obj-$(CONFIG_RALINK_RT2883)	+= nvram_kernel.o
+obj-$(CONFIG_ADM5120)	+= nvram_kernel.o
 obj-$(CONFIG_ATHEROS)		+= nvram_kernel.o
 obj-$(CONFIG_MTD_RALINK)        += ralink-flash.o
 obj-$(CONFIG_CAVIUM_OCTEON_SOC) += nvram_kernel.o
