--- a/src/linux/universal/linux-4.9/drivers/mtd/maps/Makefile
+++ b/src/linux/universal/linux-4.9/drivers/mtd/maps/Makefile
@@ -88,6 +88,7 @@ obj-$(CONFIG_RALINK_RT5350)	+= nvram_kernel.o
 obj-$(CONFIG_RALINK_RT3883)	+= nvram_kernel.o
 obj-$(CONFIG_RALINK_RT2880)	+= nvram_kernel.o
 obj-$(CONFIG_RALINK_RT2883)	+= nvram_kernel.o
+obj-$(CONFIG_ADM5120)	+= nvram_kernel.o
 obj-$(CONFIG_ATHEROS)		+= nvram_kernel.o
 obj-$(CONFIG_ARCH_ALPINE)		+= nvram_kernel.o
 obj-$(CONFIG_MTD_RALINK)        += ralink-flash.o
