--- a/src/linux/universal/linux-4.9/drivers/mtd/Makefile
+++ b/src/linux/universal/linux-4.9/drivers/mtd/Makefile
@@ -33,6 +33,7 @@ obj-$(CONFIG_SSFDC)		+= ssfdc.o
 obj-$(CONFIG_SM_FTL)		+= sm_ftl.o
 obj-$(CONFIG_MTD_OOPS)		+= mtdoops.o
 obj-$(CONFIG_MTD_SWAP)		+= mtdswap.o
+obj-$(CONFIG_MTD_TRXSPLIT)	+= trxsplit.o
 
 nftl-objs		:= nftlcore.o nftlmount.o
 inftl-objs		:= inftlcore.o inftlmount.o
