alternate uart driver
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35894 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/linux/universal/linux-3.18/drivers/tty/serial/Kconfig
+++ b/src/linux/universal/linux-3.18/drivers/tty/serial/Kconfig
@@ -18,6 +18,22 @@ source "drivers/tty/serial/8250/Kconfig"
 
 comment "Non-8250 serial port support"
 
+config SERIAL_ADM5120
+       bool "ADM5120 serial port support"
+       depends on ADM5120
+       select SERIAL_CORE
+       select SERIAL_CORE_CONSOLE
+       help
+         Driver for the on chip UARTs on the ADM5120 SoC
+
+config ADM5120_NR_UARTS
+       int "Maximum number of ADM5120 serial ports"
+       depends on SERIAL_ADM5120
+       default "2"
+       ---help---
+         Set this to the number of serial ports you want the driver to
+         support.
+
 config SERIAL_AMBA_PL010
 	tristate "ARM AMBA PL010 serial port support"
 	depends on ARM_AMBA && (BROKEN || !ARCH_VERSATILE)
