for everything else, a basic one
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35897 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/linux/universal/linux-3.18/arch/mips/adm5120/compex/Makefile
+++ b/src/linux/universal/linux-3.18/arch/mips/adm5120/compex/Makefile
@@ -3,3 +3,4 @@ obj-y	+= compex.o
 obj-$(CONFIG_ADM5120_MACH_NP27G)	+= np27g.o
 obj-$(CONFIG_ADM5120_MACH_NP28G)	+= np28g.o
 obj-$(CONFIG_ADM5120_MACH_WP54)		+= wp54.o
+obj-$(CONFIG_ADM5120_MACH_GENERIC)		+= generic.o
