--- a/src/linux/universal/linux-4.14/arch/mips/adm5120/Kconfig
+++ b/src/linux/universal/linux-4.14/arch/mips/adm5120/Kconfig
@@ -37,6 +37,13 @@ config ADM5120_MACH_WP54
 	select ADM5120_OEM_COMPEX
 	default y
 
+config ADM5120_MACH_GENERIC
+	bool "Compex WP54 family support"
+	depends on CPU_LITTLE_ENDIAN
+	select ADM5120_SOC_BGA
+	select ADM5120_OEM_COMPEX
+	default y
+
 config ADM5120_MACH_EB_214A
 	bool "EB-214A support"
 	depends on CPU_LITTLE_ENDIAN
