--- a/src/linux/universal/linux-4.14/arch/mips/adm5120/compex/Makefile
+++ b/src/linux/universal/linux-4.14/arch/mips/adm5120/compex/Makefile
@@ -3,3 +3,4 @@ obj-y	+= compex.o
 obj-$(CONFIG_ADM5120_MACH_NP27G)	+= np27g.o
 obj-$(CONFIG_ADM5120_MACH_NP28G)	+= np28g.o
 obj-$(CONFIG_ADM5120_MACH_WP54)		+= wp54.o
+obj-$(CONFIG_ADM5120_MACH_GENERIC)		+= generic.o
