link to e2fsprogs variant
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35951 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/zfs/Makefile
+++ b/src/router/zfs/Makefile
@@ -26,7 +26,7 @@ configure:
 	make -C tools/libtirpc
 # for bootstrapping
 	cd tools && ./autogen.sh
-	cd tools && ./configure --enable-fast-install --with-sysroot=yes --libdir=/usr/lib --host=$(ARCH)-linux CFLAGS="$(COPTS) $(MIPS16_OPT) -DNEED_PRINTF -I$(TOP)/zlib -I$(TOP)/zfs/tools/include -I$(TOP)/zfs/tools/libtirpc  -I$(TOP)/zfs/tools/libtirpc/tirpc" LDFLAGS="-L$(TOP)/zlib -L$(TOP)/e2fsprogs/lib/uuid -L$(TOP)/zfs/tools/libtirpc/src/.libs -L$(TOP)/util-linux/.libs" --prefix=/usr
+	cd tools && ./configure --enable-fast-install --with-sysroot=yes --libdir=/usr/lib --host=$(ARCH)-linux CFLAGS="$(COPTS) $(MIPS16_OPT) -DNEED_PRINTF -I$(TOP)/zlib -I$(TOP)/zfs/tools/include -I$(TOP)/zfs/tools/libtirpc  -I$(TOP)/zfs/tools/libtirpc/tirpc" LDFLAGS="-L$(TOP)/zlib -L$(TOP)/e2fsprogs/lib/blkid -L$(TOP)/e2fsprogs/lib/uuid -L$(TOP)/zfs/tools/libtirpc/src/.libs" --prefix=/usr
 	find . -name *.la -exec sed -i 's/relink_command/# relink_command/g' {} +
 	find . -name *.la -exec touch {} +
 
