--- a/src/router/Makefile.pb42
+++ b/src/router/Makefile.pb42
@@ -449,6 +449,16 @@ ifeq ($(CONFIG_ARCHERC7),y)
 else
 	echo "# CONFIG_ARCHERC7 is not set" >> $(LINUXDIR)/.config
 endif
+ifeq ($(CONFIG_WR1043V4),y)
+	echo CONFIG_WR1043V4=y >> $(LINUXDIR)/.config
+else
+	echo "# CONFIG_WR1043V4 is not set" >> $(LINUXDIR)/.config
+endif
+ifeq ($(CONFIG_WR1043V5),y)
+	echo CONFIG_WR1043V5=y >> $(LINUXDIR)/.config
+else
+	echo "# CONFIG_WR1043V5 is not set" >> $(LINUXDIR)/.config
+endif
 ifeq ($(CONFIG_ARCHERC7V4),y)
 	echo CONFIG_ARCHERC7V4=y >> $(LINUXDIR)/.config
 else
@@ -2035,13 +2045,18 @@ ifeq ($(CONFIG_WR1043V2),y)
 	-./tools/safeloader/tplink-safeloader -B ARCHER-C7-V4 -V 1 -S -k $(ARCH)-uclibc/root.uimage -r $(ARCH)-uclibc/root.fs -o mips-uclibc/archerC7v4_tp_recovery.bin
 	-./tools/trx_n -m 40000000 -o $(ARCH)-uclibc/ARCHER-C7v4-firmware.bin mips-uclibc/archerC7v4_tp_recovery.bin
 
+	-./tools/safeloader/mktplinkfw \
+		-c -H 0x10430004 -W 0x1 -L 0x80060000 \
+		-E 0x80060000 \
+		-m 1 "TP-LINK Technologies" -V "ver. 1.0" \
+		-k $(ARCH)-uclibc/vmlinux.tpl -o $(ARCH)-uclibc/vmlinux.v4
 
-	-./tools/safeloader/tplink-safeloader -B TLWR1043NDV4 -V 1 -k $(ARCH)-uclibc/root.uimage -r $(ARCH)-uclibc/root.fs -o mips-uclibc/tplink-WR1043v4-firmware.bin
-	-./tools/safeloader/tplink-safeloader -B TLWR1043NDV4 -V 1 -S -k $(ARCH)-uclibc/root.uimage -r $(ARCH)-uclibc/root.fs -o mips-uclibc/WR1043v4_tp_recovery.bin
+	-./tools/safeloader/tplink-safeloader -B TLWR1043NDV4 -V 1 -k $(ARCH)-uclibc/vmlinux.v4 -r $(ARCH)-uclibc/root.fs -o mips-uclibc/tplink-WR1043v4-firmware.bin
+	-./tools/safeloader/tplink-safeloader -B TLWR1043NDV4 -V 1 -S -k $(ARCH)-uclibc/vmlinux.v4 -r $(ARCH)-uclibc/root.fs -o mips-uclibc/WR1043v4_tp_recovery.bin
 	-./tools/trx_n -m 40000000 -o $(ARCH)-uclibc/WR1043v4-firmware.bin mips-uclibc/WR1043v4_tp_recovery.bin
 
-	-./tools/safeloader/tplink-safeloader -B TLWR1043NDV5 -V 1 -k $(ARCH)-uclibc/root.uimage -r $(ARCH)-uclibc/root.fs -o mips-uclibc/tplink-WR1043v5-firmware.bin
-	-./tools/safeloader/tplink-safeloader -B TLWR1043NDV5 -V 1 -S -k $(ARCH)-uclibc/root.uimage -r $(ARCH)-uclibc/root.fs -o mips-uclibc/WR1043v5_tp_recovery.bin
+	-./tools/safeloader/tplink-safeloader -B TLWR1043NV5 -V 1 -k $(ARCH)-uclibc/root.uimage -r $(ARCH)-uclibc/root.fs -o mips-uclibc/tplink-WR1043v5-firmware.bin
+	-./tools/safeloader/tplink-safeloader -B TLWR1043NV5 -V 1 -S -k $(ARCH)-uclibc/root.uimage -r $(ARCH)-uclibc/root.fs -o mips-uclibc/WR1043v5_tp_recovery.bin
 	-./tools/trx_n -m 40000000 -o $(ARCH)-uclibc/WR1043v5-firmware.bin mips-uclibc/WR1043v5_tp_recovery.bin
 
 
